test/CheckError/StaticRef/InvalidStaticRefPolyCast.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

interface Interface {
	static void method();
}

void function0(staticref<TestClass> typename_t typeValue) {
	// CHECK: .loci:12:12: error: Can't implicitly cast value of type 'ref<lval<staticref<TestClass>(typename_t)>(value_lval_t<staticref<TestClass>(typename_t)>)>(lval<staticref<TestClass>(typename_t)>(value_lval_t<staticref<TestClass>(typename_t)>)&)' to type 'staticref<Interface>(typename_t)'.
	function1(typeValue);
}

void function1(staticref<Interface> typename_t typeValue) { }

export int main(unused int argc, unused ubyte ** argv) {
	function0(TestClass);
	return 0;
}

// CHECK: 1 error generated.

